# radial-dots

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  radial_dots.js  radial_dots.wasm  rust-toolchain  style.css
.devcontainer/: devcontainer.json  post-create.sh
scripts/: build_and_deploy.sh
src/: drawing_style.rs  lib.rs  log.rs  main.rs  serializable_app_state.rs  utf_to_binary.rs
src/components/: app.rs  arc_style_editor.rs  dot_editor.rs  dots_diagram.rs  error_toast.rs  float_field_set.rs  mod.rs  svg_view.rs  text_path_style.rs  text_path_style_editor.rs
src/fig/: diagram.rs  dot.rs  text_path.rs
src/static/: index.html  style.css
src/svg/: svg_drawable.rs  util.rs
