[package]
name = "radial_dots"
version = "0.1.1"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.2"
yew = "0.6.0"
base64 = "0.10.1"
wee_alloc = "0.4.4"
serde = {version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

[profile.release]
lto = true
debug = false
opt-level = 'z'
