[package]
name = "radial_dots"
version = "0.1.1"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.21.0", features = ["csr"]}
base64 = "0.10.1"
serde = {version = "1.0.90", features = ["derive"]}
serde_json = "1.0.39"
xml-rs = "0.8"
web-sys={ version = "0.3", features = ["File", "DragEvent", "DataTransfer", "DataTransferItemList", "DataTransferItem"]}
gloo-file = "0.3.0"
lol_alloc = "0.4.0"

[profile.release]
lto = true
debug = false
opt-level = 'z'
